--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -10,79 +10,76 @@
     </div>
   </div>
 
-    <div class="row main-content-body">
-      <div class="row btm-divider">
-        <div class="getting-started-cont">
-          <div class="started">
-            <i class="left material-icons">info_outline</i>
-            <h5 class="left">Getting Started</h5>
-          </div>
-          <p class="right"> Follow these 5 simple steps to launch your store </p>
+  <div class="row main-content-body">
+    <div class="row btm-divider">
+      <div class="getting-started-cont">
+        <div class="started">
+          <i class="left material-icons">info_outline</i>
+          <h5 class="left">Getting Started</h5>
         </div>
+        <p class="right"> Follow these 5 simple steps to launch your store </p>
       </div>
+    </div>
 
-      <div class="row btm-divider">     
-        <div class="steps">
-          <p class="left">1</p>
-          <div class="left steps-description">
-            <div class="steps-title">
-              <a href="#">Add your products</a>
-            </div>
-            <div class="steps-detail">Add product and upload their pictures from the <a href="#">Products section.</a>
-            </div>
+    <div class="row btm-divider">     
+      <div class="steps">
+        <p class="left">1</p>
+        <div class="left steps-description">
+          <div class="steps-title">
+            <a href="#">Add your products</a>
           </div>
-        </div>
-      </div>
-
-      <div class="row btm-divider">      
-        <div class="steps">
-          <p class="left">2</p>
-          <div class="left steps-description">
-            <div class="steps-title">
-              <a href="#">Set up delivery rates</a>
-            </div>
-            <div class="steps-detail">You can setup your delivery charges from the <a href="#">Orders</a> section.</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row btm-divider">      
-        <div class="steps">
-          <p class="left">3</p>
-          <div class="left steps-description">
-            <div class="steps-title">
-              <a href="#">Set up payment methods</a>
-            </div>
-            <div class="steps-detail"><a href="#">Activate</a> the payment options you want to accept on your store.</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row btm-divider">    
-        <div class="steps">
-          <p class="left">4</p>
-          <div class="left steps-description">
-            <div class="steps-title">
-              <a href="#">Add Coupons</a>
-            </div>
-            <div class="steps-detail">Add <a href="#">coupons</a> to drive sales and attract customers.</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row btm-divider">    
-        <div class="steps">
-          <p class="left">5</p>
-          <div class="left steps-description">
-            <div class="steps-title">
-              <a href="#">Go live and start accepting orders</a>
-            </div>
-            <div class="steps-detail">
-              <a href="#">View your shop.</a>
-                You can start accepting orders immediately.
-            </div>
+          <div class="steps-detail">Add product and upload their pictures from the <a href="#">Products section.</a>
           </div>
         </div>
       </div>
     </div>
+
+    <div class="row btm-divider">      
+      <div class="steps">
+        <p class="left">2</p>
+        <div class="left steps-description">
+          <div class="steps-title">
+            <a href="#">Set up delivery rates</a>
+          </div>
+          <div class="steps-detail">You can setup your delivery charges from the <a href="#">Orders</a> section.</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row btm-divider">      
+      <div class="steps">
+        <p class="left">3</p>
+        <div class="left steps-description">
+          <div class="steps-title">
+            <a href="#">Set up payment methods</a>
+          </div>
+          <div class="steps-detail"><a href="#">Activate</a> the payment options you want to accept on your store.</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row btm-divider">    
+      <div class="steps">
+        <p class="left">4</p>
+        <div class="left steps-description">
+          <div class="steps-title">
+            <a href="#">Add Coupons</a>
+          </div>
+          <div class="steps-detail">Add <a href="#">coupons</a> to drive sales and attract customers.</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row btm-divider">    
+      <div class="steps">
+        <p class="left">5</p>
+        <div class="left steps-description">
+          <div class="steps-title">
+            <a href="#">Go live and start accepting orders</a>
+          </div>
+          <div class="steps-detail"><a href="#">View your shop.</a> You can start accepting orders immediately.</div>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
