--- a/app/assets/stylesheets/shop.scss
+++ b/app/assets/stylesheets/shop.scss
@@ -205,8 +205,17 @@ a > h3 {
   padding: 10px 5px;
 
   i {
-    font-size: 2.28rem;
-    padding-top: 18px;
+    font-size: 2rem;
+    padding-top: 10px;
+  }
+
+  p {
+    margin-left: 10px;
+    font-size: 21px;
+  }
+
+  started {
+    margin: 10px;
   }
 }
 
@@ -214,6 +223,14 @@ a > h3 {
   font-size: 20px;
   font-weight: 300;
   padding: 10px;
+
+  a {
+    color: $primary-text-color;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
 }
 
 .steps {
