--- a/app/assets/stylesheets/shop.scss
+++ b/app/assets/stylesheets/shop.scss
@@ -156,7 +156,7 @@ a > h3 {
 
 .side-bar-menu {
   padding: 10px 5px;
-  color: white;
+  color: $primary-color-text;
 
   a {
     color: $primary-color-text;
@@ -177,8 +177,8 @@ a > h3 {
 
   .side-bar-menu-text {
     display: inline-block;
-    padding-top: 5px;
     font-size: 12px;
+    padding-top: 5px;
   }
 }
 
@@ -199,8 +199,8 @@ a > h3 {
 }
 
 .dashboard-page-title {
-  font-size: 17px;
   color: $primary-color-text;
+  font-size: 17px;
   font-weight: 200;
   text-transform: uppercase;
 }
@@ -225,8 +225,8 @@ a > h3 {
   padding: 10px 5px;
 
   i {
-    padding-top: 13px;
     margin-right: 5px;
+    padding-top: 13px;
   }
 
   h5 {
@@ -235,22 +235,22 @@ a > h3 {
 }
 
 .welcome-note-cont {
+  align-items: center;
   background-image: url("dashboard_image.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  text-align: center;
-  width: 1232px;
-  margin-left: -5%;
-  height: 235px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: -1%;
   font-size: 20px;
   font-weight: 300;
+  height: 235px;
+  justify-content: center;
+  margin-left: -5%;
+  margin-top: -1%;
   padding: 10px;
+  text-align: center;
+  width: 1232px;
 
   h4 {
     font-size: 2.6rem;
