--- a/app/views/products/_edit_form.html.erb
+++ b/app/views/products/_edit_form.html.erb
@@ -1,55 +1,64 @@
-  <%= form_for( @product, html: { multipart: true } ) do |f| %>
-    <div class="modal-content">
-      <h4>Add Product</h4>
-      
-      <% if flash[:errors] %>
-        <div id="error_explanation">
-          <ul>
-          <% flash[:errors].each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-          </ul>
-        </div>
-      <% end %>
-
-      <div class="field">
-        <%= f.label :name %><br>
-        <%= f.text_field :name, { required: true } %>
-      </div>
-
-      <div class="field">
-        <%= f.label :description %><br>
-        <%= f.text_field :description, { required: true }  %>
-      </div>
-
-      <div class="field">
-        <%= f.label :quantity %><br>
-        <%= f.text_field :quantity, { required: true }  %>
-      </div>
-
-      <div class="field">
-        <%= f.label :brand %><br>
-        <%= f.text_field :brand, { required: true } %>
-      </div>
-
-      <div class="field">
-        <%= f.label :size %><br>
-        <%= f.text_field :size, { required: true } %>
-      </div>
-
-      <div class="field">
-        <%= f.label :price %><br>
-        <%= f.text_field :price, { required: true } %>
-      </div>
-
-      <div class="field">
-        <%= f.label :image %><br>
+<%= form_for( @product, html: { multipart: true, class: "col s8 offset-s2", id: "shop-edit-form" } ) do |f| %>
+<div class="modal-content">
+  <% if flash[:errors] %>
+  <script>
+var msg = $("<ol><%= shop_form_errors(flash[:errors]).html_safe %></ol>");
+Materialize.toast(msg)
+</script>
+<% end %>
+<div class="row">
+  <div class="input-field col s10 offset-s1">
+    <%= f.label :name %><br>
+    <%= f.text_field :name, { required: true } %>
+  </div>
+</div>
+<div class="row">
+  <div class="input-field col s10 offset-s1">
+    <%= f.label :description %><br>
+    <%= f.text_field :description, { required: true }  %>
+  </div>
+</div>
+<div class="row">
+  <div class="input-field col s10 offset-s1">
+    <%= f.label :quantity %><br>
+    <%= f.text_field :quantity, { required: true }  %>
+  </div>
+</div>
+<div class="row">
+  <div class="input-field col s10 offset-s1">
+    <%= f.label :brand %><br>
+    <%= f.text_field :brand, { required: true } %>
+  </div>
+</div>
+<div class="row">
+  <div class="input-field col s10 offset-s1">
+    <%= f.label :size %><br>
+    <%= f.text_field :size, { required: true } %>
+  </div>
+</div>
+<div class="row">
+  <div class="input-field col s10 offset-s1">
+    <%= f.label :price %><br>
+    <%= f.text_field :price, { required: true } %>
+  </div>
+</div>
+<div class="row">
+  <div class="input-field col s10 offset-s1">
+    <div class="file-field input-field">
+      <div class="btn">
+        <span>Image</span>
         <%= f.file_field :image %>
       </div>
-
-      <div>
-        <%= f.submit %>
+      <div class="file-path-wrapper">
+        <input class="file-path validate" type="text">
       </div>
     </div>
-  <% end %>
+  </div>
 </div>
+<div class="row">
+  <div class="input-field col s12 center-align">
+    <button id="submit" type="submit" name="submit" class="waves-effect waves-light btn-flat bg-accent">Update</button>
+  </div>
+</div>
+</div>
+<% end %>
