--- a/app/views/shops/edit.html.erb
+++ b/app/views/shops/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row edit-form-container">
-  <h3 class="center-align edit-form-heading">Edit Shop Profile </h3>
+  <h3 class="center-align edit-form-heading">Shop Profile</h3>
   <%= render "edit_form" %>
 </div>
 
