fix: corrects dashboard image display error

--- a/app/assets/stylesheets/shop.scss
+++ b/app/assets/stylesheets/shop.scss
@@ -236,7 +236,7 @@ a > h3 {
 
 .welcome-note-cont {
   align-items: center;
-  background-image: url("dashboard_image.png");
+  background-image: url("http://i.imgur.com/YSbeBPt.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
