Refactor: adds tests for flash notice during shop profile update and refactors dashboard background CSS

--- a/app/assets/stylesheets/shop.scss
+++ b/app/assets/stylesheets/shop.scss
@@ -236,9 +236,7 @@ a > h3 {
 
 .welcome-note-cont {
   align-items: center;
-  background-image: url("http://i.imgur.com/YSbeBPt.png");
-  background-position: center;
-  background-repeat: no-repeat;
+  background: url("http://i.imgur.com/YSbeBPt.png") no-repeat center;
   background-size: cover;
   display: flex;
   flex-direction: column;
