--- a/app/views/shops/orders.html.erb
+++ b/app/views/shops/orders.html.erb
@@ -13,22 +13,25 @@
 <div class="row">
   <div class="col s5 pagination-holder">
     <ul class="tabs no-border-bottom">
-      <li class="tab col s3"><a href="" >All (<%= Order.all.count %>)</a></li>
-      <li class="tab col s3"><a  href="?filter=completed">Completed (<%= Order.pending(@shop).count %>)</a></li>
-      <li class="tab col s3"><a href="?filter=pending" >Pending (<%= Order.completed(@shop).count %>)</a></li>
+      <li class="tab col s3"><a href="" >All (<%= all_orders_count %>)</a></li>
+      <li class="tab col s3"><a  href="?status=completed">Completed (<%= Order.completed(@shop).count %>)</a></li>
+      <li class="tab col s3"><a href="?status=pending" >Pending (<%= Order.pending(@shop).count %>)</a></li>
     </ul>
   </div>
   <div class="col s2 offset-s5">
-    <a class="btn-flat tooltipped" data-delay="5" data-tooltip="Update Orders Status" data-position="top">Update</a>
+    <a class="btn-flat tooltipped update-btn" data-delay="5" data-tooltip="Update Orders Status" data-position="top">Update</a>
   </div>
 </div>
 
 
-<div class="action-container" style="display: none;">
-   <h4>*Apply action to all marked orders</h4>
-   <a class="waves-effect waves-teal btn-flat">Completed</a>
-   <a class="waves-effect waves-teal btn-flat">Pending</a>
-   <a class="btn-flat btn-red">Delete</a>
+<div class="action-container" >
+  <div class="row">
+    <div class="col s3"><h4>*Mark Fields As</h4></div>
+    <div class="col s3"><a class="btn-flat btn-teal" onclick="setOrderStatus('Completed', this)">Completed</a></div>
+    <div class="col s3"><a class="btn-flat btn-yellow" onclick="setOrderStatus('Pending', this)">Pending</a></div>
+    <div class="col s3"><a class="btn-flat btn-red" onclick="setOrderStatus('Cancelled', this)">Cancel</a></div>
+  </div>
+
 </div>
 
 <div class="row">
@@ -46,15 +49,15 @@
 
     <tbody>
       <% @orders.each do |order| %>
-        <tr>
+        <tr id='<%= order.id %>'>
           <td>
-            <input type="checkbox" id='<%= "order#{order.id}" %>'/>
+            <input class="order-check" type="checkbox" id='<%= "order#{order.id}" %>'/>
             <label for='<%= "order#{order.id}" %>'></label>
           </td>
           <td><%= order.order_number %></td>
           <td>
             <div class="input-field col s10 text-center">
-              <select class="status" value="<%= order.status %>">
+              <select class="status" value="<%= order.status %>" id='<%= "select#{order.id}" %>'>
                 <option value="Pending">Pending</option>
                 <option value="Completed">Completed</option>
               </select>
@@ -68,7 +71,6 @@
     </tbody>
   </table>
 </div>
-
 
 <div class="table-pagination">
   <ul class="pagination">
