--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -2,19 +2,23 @@
 	<div class="footer-container">
 		<div class="row">
 			<div class="white-text col s12 m4 l4">
-				<span>Quick Links</span><br /><br />
-				<%= render @menu_categories %>
+				<span>GetMyShop</span><br>
+				<span class="grey-text small-text">About Us</span><br>
+				<span class="grey-text small-text">Pricing</span><br>
+				<span class="grey-text small-text">Blog</span><br>
 			</div>
 			
 			<div class="white-text col s12 m4 l4">
-				<span>Contact Us</span><br /><br />
-				<span class="white-text small-text"><i class="tiny material-icons">phone</i>&nbsp;08020000000</span><br />
-				<span class="white-text small-text"><i class="tiny material-icons">email</i>&nbsp;support@shopify.com</span><br />
+				<span>Contact Us</span><br>
+				<span class="grey-text small-text"><i class="tiny material-icons">phone</i>&nbsp;08020000000</span><br />
+				<span class="grey-text small-text"><i class="tiny material-icons">email</i>&nbsp;support@shopify.com</span><br />
 			</div>
 			
 			<div class="white-text col s12 m4 l4">
-				<span>Payment Methods</span><br /><br />
-				<%= image_tag "http://imageshack.com/a/img633/2210/75XkCM.png" %>
+				<span>Social</span><br>
+				<span><i class="grey-text fa fa-facebook-official" aria-hidden="true"></i></span>&nbsp;
+				<span><i class="grey-text fa fa-twitter-square" aria-hidden="true"></i></span>&nbsp;
+				<span><i class="grey-text fa fa-instagram" aria-hidden="true"></i></span>
 			</div>
 		</div>
 	</div>
