--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,45 +1,34 @@
-<%= render partial: 'header' %>
+<nav>
+  <div class="nav-wrapper row landing-header">
+  	<div class="brand-logo col s2">
+  		<i class="fa fa-shopping-bag" aria-hidden="true"></i> 
+    	<a href="#">GetMyShop</a>
+  	</div>
+
+  	<div class="col s10">
+	    <ul id="nav-mobile side-nav" class="right">
+	    	<li><a class="pricing" href="#">Pricing</a></li>
+	    	<li><a class="about-us" href="#">About Us</a></li>
+	    	<li><a class="blog" href="#">Blog</a></li>
+	      <li><a class="sign-in" href="#">Sign In</a></li>
+	      <li><a class="sign-up" href="#">Sign Up</a></li>
+	    </ul>
+  	</div>
+  </div>
+</nav>
+
+      
 
 <% if flash['notice'] %>
   <%= javascript_tag do %>
       Materialize.toast("<%= flash['notice'] %>", 4000)
   <% end %>
 <% end %>
-<div class="shift-down">
-	<div class="row medium"></div>
-	<div class= "row-break"></div>
-	<% @categories.each do |category| %>
-	<div class= "row container-trim-wide"><h5 class="cat-heading"><%= category.name.upcase %></h5></div>
-	<div class="container-large">
-		<div class= "row">
-			<% products = category.products.order("RANDOM()").limit(4) %>
-			<%= render partial: "product", collection: products %>
-		</div>
-	</div>
-	<% end %>
 
+<div class="medium">
+	<h1>Sell Online With Ease.</h1>
+	<p>We've made selling online easier, quicker, and safer than it ever has been.</p>
+	<button class="btn-large">Get Started</button>
 </div>
-<div class= "pre-footer valign-wrapper">
-	<div class="container-full">
-		<div class="section">
-	<div class="row">
-		<div class="col l4 center">
-			<i class="large material-icons">thumb_up</i>
-			<h5>Customer is King</h5>
-			<p>Years of committed service. We believe in being the best!</p>
-		</div>
-		<div class="col l4 center">
-			<i class="large material-icons">stars</i>
-			<h5>Five-Star Service</h5>
-			<p>We promise, We deliver.</p>
-		</div>
-		<div class="col l4 center">
-			<i class="large material-icons">flash_on</i>
-			<h5>Speedy Delivery</h5>
-			<p>We don't just deliver. We deliver ASAP</p>
-		</div>
-		</div>
-	</div>
-	</div>
-</div>
+
 <%= render partial: 'footer' %>
