feat: shopowners should be able to cancel orders

--- a/app/assets/stylesheets/shop.scss
+++ b/app/assets/stylesheets/shop.scss
@@ -376,7 +376,7 @@ a > h3 {
 
   h4 {
     display: inline;
-    font-size: 23px;
+    font-size: $gm-font-m;
     font-style: italic;
     font-weight: 50px;
     margin-right: 20px;
