--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -15,6 +15,7 @@ $light-gray: #f5f5f5;
 $grey-border: #efefef;
 $bottom-border: #e8e8e8;
 $section-color: #333;
+$gm-font-m: 23px;
 $section-title-size: 600;
 $section-text-size: 400;
 $section-button-size: 500;
