--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,20 +1,20 @@
 <div class="footer valign-wrapper">
 	<div class="footer-container">
-		<div class="row">
-			<div class="white-text col s12 m4 l4">
+		<div class="footer-links">
+			<div class="white-text">
 				<span>GetMyShop</span><br>
 				<span class="grey-text small-text">About Us</span><br>
 				<span class="grey-text small-text">Pricing</span><br>
 				<span class="grey-text small-text">Blog</span><br>
 			</div>
 			
-			<div class="white-text col s12 m4 l4">
+			<div class="white-text">
 				<span>Contact Us</span><br>
 				<span class="grey-text small-text"><i class="tiny material-icons">phone</i>&nbsp;08020000000</span><br />
 				<span class="grey-text small-text"><i class="tiny material-icons">email</i>&nbsp;support@shopify.com</span><br />
 			</div>
 			
-			<div class="white-text col s12 m4 l4">
+			<div class="white-text">
 				<span>Social</span><br>
 				<span><i class="grey-text fa fa-facebook-official" aria-hidden="true"></i></span>&nbsp;
 				<span><i class="grey-text fa fa-twitter-square" aria-hidden="true"></i></span>&nbsp;
