--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -6,7 +6,7 @@
   	</div>
 
   	<div class="col s10">
-	    <ul id="nav-mobile side-nav" class="right">
+	    <ul id="nav-mobile" class="right">
 	    	<li><a class="pricing" href="#">Pricing</a></li>
 	    	<li><a class="about-us" href="#">About Us</a></li>
 	    	<li><a class="blog" href="#">Blog</a></li>
@@ -27,7 +27,7 @@
 
 <div class="medium">
 	<h1>Sell Online With Ease.</h1>
-	<p>We've made selling online easier, quicker, and safer than it ever has been.</p>
+	<p>All you need to sell online, none of the headache.</p>
 	<button class="btn-large">Get Started</button>
 </div>
 
