--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -3,13 +3,14 @@
 		<div class="footer-links">
 			<div class="white-text">
 				<span>GetMyShop</span><br>
-				<span class="grey-text small-text">About Us</span><br>
-				<span class="grey-text small-text">Pricing</span><br>
-				<span class="grey-text small-text">Blog</span><br>
+				<span class="small-text"><%= link_to "About Us", about_path, class: 'grey-text' %></span><br>
+				<span class="small-text"><%= link_to "FAQ", faq_path, class: 'grey-text' %></span><br>
+				<span class="small-text"><%= link_to "Blog", blog_path, class: 'grey-text' %></span><br>
+				<span class="small-text"><%= link_to "Contact Us", "/contact", class: 'grey-text' %></span><br>
 			</div>
 			
 			<div class="white-text">
-				<span>Contact Us</span><br>
+				<span>Support</span><br>
 				<span class="grey-text small-text"><i class="tiny material-icons">phone</i>&nbsp;08020000000</span><br />
 				<span class="grey-text small-text"><i class="tiny material-icons">email</i>&nbsp;support@shopify.com</span><br />
 			</div>
