--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,52 +1,82 @@
-<nav class="white valign-wrapper">
-  <div class="row white-header">
-    <div class="col s2">
-      <div class="left">
-        <a class="brand-logo black-text" href="<%= root_path %>">
-          <div class="left">
-            <span>Shopify</span>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col s4 offset-s3 search-container">
-      <div class="search-bar">
-        <div class="input-field my-input" id="search-input">
-         <%= form_tag({controller: "search", action: "result"}, method: "get") do %>
-         <%= text_field_tag :term, "", required: "required", placeholder: "Search by product name or category", class: "black-text browser-default", id: "my-input-field" %>
-         <% end %>
+<div class="top-contain">
+  <div id="top-fixed">
+    <div class="top-bar valign-wrapper">
+      <div class="container-trim">
+        <div class="left">
+          <span class="white-text small-text">FAST &amp; FREE SHIPPING ON ALL ORDERS - CALL US : 08020000000</span>
+        </div>
+        <div class="right">
+          <%= link_to "About us", about_path, class: 'white-text small-text' %>
+          <span class="white-text small-text">&nbsp;|&nbsp;</span>
+          <%= link_to "Blog", blog_path, class: 'white-text small-text' %>
+          <span class="white-text small-text">&nbsp;|&nbsp;</span>
+          <%= link_to "Contact Us", "/contact", class: 'white-text small-text' %>
+          <span class="white-text small-text">&nbsp;|&nbsp;</span>
+          <%= link_to "FAQ", faq_path, class: 'white-text small-text' %>
+          <span class="white-text small-text">&nbsp;|&nbsp;</span>
+          <%= link_to "Register Shop", signup_path, class: 'white-text small-text' %>
+          <span class="white-text small-text">&nbsp;|&nbsp;</span>
+          <span  class="white-text small-text">Currency - NGN</span>
+            <span class="white-text small-text">&nbsp;|&nbsp;</span>
+            <span class="small-text">
+
+              <%= auth_link %>
+            </span>
         </div>
       </div>
-      <div class="">
-      &nbsp;
-      </div>
     </div>
-    ​
-    <div class="col s3">
-      <div class="right">
-        <span class="search-icon-span left">
-          <i class="large material-icons search-i" id="search">search</i>
-        </span>
+    <nav class="white valign-wrapper">
+      <div class="row white-header">
+        <div class="col s2">
+          <div class="left">
+            <a class="brand-logo black-text" href="<%= root_path %>">
+              <div class="left">
+                <span>Shopify</span>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col s4 offset-s3 search-container">
+          <div class="search-bar">
+            <div class="input-field my-input" id="search-input">
+             <%= form_tag({controller: "search", action: "result"}, method: "get") do %>
+             <%= text_field_tag :term, "", required: "required", placeholder: "Search by product name or category", class: "black-text browser-default", id: "my-input-field" %>
+             <% end %>
+            </div>
+          </div>
+          <div class="">
+          &nbsp;
+          </div>
+        </div>
+        ​
+        <div class="col s3">
+          <div class="right">
+            <span class="search-icon-span left">
+              <i class="large material-icons search-i" id="search">search</i>
+            </span>
 
-        <span class="white-text small-text">&nbsp;|&nbsp;</span>
-        <span class="category-span">
+            <span class="white-text small-text">&nbsp;|&nbsp;</span>
+            <span class="category-span">
 
-          <%= link_to "CATEGORIES", categories_path, class: "black-text category-link" %>
+              <%= link_to "CATEGORIES", categories_path, class: "black-text category-link" %>
 
-          <%= render "category_dropdown" %>
+              <%= render "category_dropdown" %>
 
-        </span>
-        <span class="white-text small-text">&nbsp;|&nbsp;</span>
-        <span class="cart-span" id="cart-span">
-          <a href="#" class="black-text cart-link">CART<span class="total-text"><span id="total-item" class="total-item">
-            <% if cookies[:cart] && JSON.parse(cookies[:cart]).size > 0 %>
-            <%= JSON.parse(cookies[:cart]).size %>
-            <% end %>
-            </span></span>
-          </a>
-          <%= render "cart_dropdown" %>
-        </span>
-      </div>
+            </span>
+            <span class="white-text small-text">&nbsp;|&nbsp;</span>
+            <span class="cart-span" id="cart-span">
+              <a href="#" class="black-text cart-link">CART<span class="total-text"><span id="total-item" class="total-item">
+                <% if cookies[:cart] && JSON.parse(cookies[:cart]).size > 0 %>
+                <%= JSON.parse(cookies[:cart]).size %>
+                <% end %>
+                </span></span>
+              </a>
+              <%= render "cart_dropdown" %>
+            </span>
+          </div>
+          </div>
+        </div>
+      </nav>
     </div>
   </div>
-</nav>
+</div>
